k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops-prod
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 5000
